--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 		<version>20180813</version>
 	</dependency>
 	
+	<dependency>
+		<groupId>joda-time</groupId>
+		<artifactId>joda-time</artifactId>
+		<version>2.10</version>
+	</dependency>
+	
   </dependencies>
   
   <build>
