--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,23 @@
+<!--
+
+    Copyright 2020 Universitat Politècnica de València
+
+    See the NOTICE file distributed with this work for additional information
+    regarding copyright ownership.
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+        http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>activage.tools</groupId>
@@ -92,7 +112,65 @@
             </manifestEntries>
           </archive>
         </configuration>
-      </plugin>	  
+      </plugin>	 
+	  
+	  <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>2.0.0</version>
+		<configuration>
+				<inceptionYear>2020</inceptionYear>
+				<organizationName>Universitat Politecnica de Valencia</organizationName>
+                <projectName>Independent Data Storage</projectName>   
+				<licenseName>apache_v2</licenseName>
+        </configuration>
+        <executions>
+          <execution>
+            <id>aggregate-download-licenses</id>
+            <goals>
+              <goal>aggregate-download-licenses</goal>
+            </goals>
+          </execution>
+		  <execution>
+            <id>aggregate-add-third-party</id>
+            <goals>
+              <goal>aggregate-add-third-party</goal>
+            </goals>
+			                                <configuration>
+                                    <outputDirectory>license</outputDirectory>
+                                    <thirdPartyFilename>NOTICE</thirdPartyFilename>
+                                    <fileTemplate>license/NOTICE-template.ftl</fileTemplate>
+
+                                </configuration>			
+          </execution>  
+        </executions>
+      </plugin> 	  
+	  
+	  <plugin>
+			<groupId>com.mycila</groupId>
+			<artifactId>license-maven-plugin</artifactId>
+			<version>3.0</version>
+			<configuration>
+
+						<header>license/license-header.txt</header>
+						<includes>
+							<include>**/*.java</include>
+							<include>**/*.xml</include>
+						</includes>
+						<excludes>
+							<exclude>license/*</exclude>
+						</excludes>
+
+			</configuration>
+			<executions>
+				<execution>
+					<goals>
+						<goal>check</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+	  
     </plugins>
 	
   </build>
